[package]
name = "flow-html"
version = "0.1.0"
description = "FLOW-HTML"
edition = "2021"
authors = ["Flow Developers"]

[dependencies]
flow-html-macro={path="./macro"}
lazy_static="*"
regex = "1"

wasm-bindgen="*"
[dependencies.web-sys]
version = "0.3.56"
features = [
    'console',
    'Window',
    'Document',
    'Element',
    'Text',
    'HtmlCollection'
]
