[package]
name = "flow-html-macro"
version = "0.1.0"
description = "FLOW-HTML-MACRO"
edition = "2021"
authors = ["Flow Developers"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.99", features = ["full", "parsing", "extra-traits"]}
quote = "1.0.21"
proc-macro2="1.0.43"
proc-macro-error = { version = "1", default-features = false }
lazy_static="*"
